--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/defnot001/KoalaBot.git"
+    "url": "git+https://github.com/defnot001/KiwiTech-Bot.git"
   },
   "author": "defnot",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/defnot001/KoalaBot/issues"
+    "url": "https://github.com/defnot001/KiwiTech-Bot/issues"
   },
-  "homepage": "https://github.com/defnot001/KoalaBot#readme",
+  "homepage": "https://github.com/defnot001/KiwiTech-Bot#readme",
   "dependencies": {
     "axios": "^1.3.2",
     "canvas": "^2.10.2",
