--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/defnot001/KiwiTech-Bot#readme",
   "dependencies": {
+    "@prisma/client": "4.10.1",
     "axios": "^1.3.2",
     "canvas": "^2.10.2",
     "discord.js": "^14.6.0",
@@ -38,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^8.31.0",
+    "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.9.4",
