--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "glob": "^8.0.3",
     "minecraft-server-util": "^5.3.1",
     "ptero-client": "^1.1.3",
-    "save-dev": "^0.0.1-security"
+    "save-dev": "^0.0.1-security",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
