--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "koalabot",
+  "name": "kiwitech-bot",
   "version": "2.0.0",
   "description": "Discord.js v14 Bot for managing Minecraft Servers.",
-  "main": "src/index.ts",
+  "main": "./src/index.ts",
+  "type": "commonjs",
   "scripts": {
     "dev": "NODE_ENV=development ts-node-esm src/index.ts",
     "test": "vitest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "build": "rm -rf dist && tsc && cp src/assets/minecraft.ttf dist/assets/minecraft.ttf",
-    "deploy": "rm -rf dist && tsc && cp src/assets/minecraft.ttf dist/assets/minecraft.ttf && NODE_ENV=production node dist/index.js"
+    "build": "tsup src/index.ts --format cjs && tsc && cp src/assets/minecraft.ttf dist/assets/minecraft.ttf",
+    "deploy": "tsup src/index.ts --format cjs && tsc && cp src/assets/minecraft.ttf dist/assets/minecraft.ttf && NODE_ENV=production node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,13 +26,14 @@
     "@prisma/client": "4.10.1",
     "axios": "^1.3.2",
     "canvas": "^2.10.2",
-    "discord.js": "^14.8.0",
-    "djs-handlers": "^1.0.5",
+    "discord.js": "^14.9.0",
+    "djs-handlers": "^1.0.6",
     "dotenv": "^16.0.3",
     "glob": "^8.0.3",
     "minecraft-server-util": "^5.3.1",
     "ptero-client": "^1.1.3",
     "save-dev": "^0.0.1-security",
+    "tsup": "^6.7.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
