--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "@prisma/client": "4.10.1",
     "axios": "^1.3.2",
     "canvas": "^2.10.2",
-    "discord.js": "^14.9.0",
+    "discord.js": "^14.10.0",
     "djs-handlers": "^1.0.6",
     "dotenv": "^16.0.3",
     "glob": "^8.0.3",
     "minecraft-server-util": "^5.3.1",
     "ptero-client": "^1.1.3",
     "save-dev": "^0.0.1-security",
+    "sharp": "^0.32.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
