removed deprecated option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,6 @@
     "removeComments": true,
     "noPropertyAccessFromIndexSignature": true,
     "incremental": true,
-    "noImplicitOverride": true,
-    "importsNotUsedAsValues": "error"
+    "noImplicitOverride": true
   }
 }
