--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@prisma/client": "4.10.1",
     "axios": "^1.3.2",
     "canvas": "^2.10.2",
-    "discord.js": "^14.10.0",
+    "discord.js": "14.11.0",
     "djs-handlers": "^1.0.6",
     "dotenv": "^16.0.3",
     "glob": "^8.0.3",
