--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "homepage": "https://github.com/defnot001/KiwiTech-Bot#readme",
   "dependencies": {
-    "@prisma/client": "4.10.1",
+    "@prisma/client": "^5.1.1",
     "axios": "^1.3.2",
     "canvas": "^2.10.2",
-    "discord.js": "14.11.0",
+    "discord.js": "14.12.0",
     "djs-handlers": "^1.0.6",
     "dotenv": "^16.0.3",
     "glob": "^8.0.3",
@@ -41,7 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^8.31.0",
-    "prisma": "^4.10.1",
+    "prisma": "^5.1.1",
     "typescript": "^4.9.4"
   }
 }
