--- a/package.json
+++ b/package.json
@@ -22,26 +22,26 @@
   },
   "homepage": "https://github.com/defnot001/KiwiTech-Bot#readme",
   "dependencies": {
-    "@prisma/client": "^5.1.1",
-    "axios": "^1.3.2",
-    "canvas": "^2.10.2",
+    "@prisma/client": "5.1.1",
+    "axios": "1.4.0",
+    "canvas": "2.11.2",
     "discord.js": "14.12.0",
-    "djs-handlers": "^1.0.6",
-    "dotenv": "^16.0.3",
-    "glob": "^8.0.3",
+    "djs-handlers": "1.0.6",
+    "dotenv": "16.3.1",
+    "glob": "10.3.3",
     "minecraft-server-util": "^5.3.1",
-    "ptero-client": "^1.1.3",
+    "ptero-client": "1.1.3",
     "save-dev": "^0.0.1-security",
-    "sharp": "^0.32.1",
-    "zod": "^3.21.4"
+    "sharp": "0.32.5",
+    "zod": "3.22.1"
   },
   "devDependencies": {
-    "@types/glob": "^8.0.0",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "eslint": "^8.31.0",
-    "prisma": "^5.1.1",
-    "typescript": "^4.9.4"
+    "@types/glob": "^8.1.0",
+    "@types/node": "20.5.0",
+    "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@typescript-eslint/parser": "6.4.0",
+    "eslint": "8.47.0",
+    "prisma": "5.1.1",
+    "typescript": "5.1.6"
   }
 }
