--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   "homepage": "https://github.com/defnot001/KiwiTech-Bot#readme",
   "dependencies": {
     "@prisma/client": "5.1.1",
+    "@types/express": "^4.17.17",
     "axios": "1.4.0",
+    "body-parser": "^1.20.2",
     "canvas": "2.11.2",
     "discord.js": "14.12.0",
     "djs-handlers": "1.0.6",
     "dotenv": "16.3.1",
+    "express": "^4.18.2",
     "glob": "10.3.3",
     "minecraft-server-util": "^5.3.1",
     "ptero-client": "1.1.3",
