added application id

--- a/.env.template
+++ b/.env.template
@@ -58,3 +58,5 @@ MINECRAFT_SNAPSHOTS_SERVERID =
 MINECRAFT_SNAPSHOTS_PORT =
 MINECRAFT_SNAPSHOTS_RCON_PORT =
 MINECRAFT_SNAPSHOTS_RCON_PASSWORD =
+
+APPLICATION_ID =
