added application channel id

--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,7 @@ CHANNEL_RESOURCES =
 CHANNEL_SERVERINFO =
 CHANNEL_TODO =
 CHANNEL_TODO_LOG =
+CHANNEL_APPLICATION =
 
 # discord role IDs
 ROLE_MEMBER = 
